# Fastapi-Full-Stack-Demo

./: .gitignore  README.md
backend/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 58c19980d43f_clean_initial_migration.py
backend/app/: __init__.py  app_lifecycle.py
backend/app/core/connects/: __init__.py  database.py  redis.py  redis_client.py
backend/app/core/decorators/: __init__.py  permission.py  response_decorators.py
backend/app/core/middleware/: __init__.py  bot_detection_middleware.py  error_middleware.py  log_middleware.py
backend/app/core/models/: __init__.py  exceptions.py  response_models.py
backend/app/core/rate_limit/: __init__.py  algorithms.py  middleware.py  rate_limiter.py  storage.py
backend/app/core/settings/: __init__.py  config.py
backend/app/core/tools/: __init__.py  log_tool.py  security_tool.py  timezone_tool.py
backend/app/core/utils/: __init__.py  log_util.py  password_util.py  redis_util.py  security_util.py  timezone_util.py
backend/app/modules/models/: __init__.py  base_model.py  rbac_model.py
backend/app/modules/repositories/: __init__.py  base_repository.py  menu_repository.py  permission_repository.py  role_repository.py  user_repository.py
backend/app/modules/schemas/: __init__.py  auth_schema.py  (+6 more)
backend/app/routers/: __init__.py  root_router.py
backend/app/services/: __init__.py  auth_service.py  base_service.py  rbac_service.py  root_service.py  session_service.py
backend/tests/: rate_limit_anti_scraping_tests.md  test_rate_limit.sh
(+61 files in other folders)
